# cncrewards

./: README.md  access.json  app.py  config.json  earntuto.json  links.json  pyproject.toml  timer.json
static/css/: style.css
static/js/: app.js
templates/: access_denied.html  admin_dashboard.html  admin_login.html  base.html  claim_success.html  dashboard.html  earn_coins.html  forgot_password.html  index.html  login.html  privateone.html  purchase_history.html  register.html  reset_password.html  store.html  verify_email.html
